[gd_scene load_steps=4 format=3 uid="uid://bf4j8sjvm0un8"]

[ext_resource type="Script" path="res://user_interface/menu/pause_menu/confirmation_modal/confirmation_modal.gd" id="1_7cfqc"]
[ext_resource type="Script" path="res://user_interface/menu/components/button/ui_button.gd" id="2_l8skd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ie6sl"]
bg_color = Color(0.2, 0.2, 0.2, 1)

[node name="ConfirmationModal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7cfqc")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(300, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ie6sl")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ClosedButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 8
text = "X"
script = ExtResource("2_l8skd")

[node name="Title" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Title"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Title"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ConfirmationButtons" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/ConfirmationButtons"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="AcceptButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ConfirmationButtons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Yes"
script = ExtResource("2_l8skd")

[node name="Spacer2" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/ConfirmationButtons"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="DeclineButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ConfirmationButtons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 20
text = "No"
script = ExtResource("2_l8skd")

[node name="Spacer3" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/ConfirmationButtons"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ClosedButton" to="." method="onPressedClosedButton"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ConfirmationButtons/AcceptButton" to="." method="onPressedAcceptButton"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ConfirmationButtons/DeclineButton" to="." method="onPressedDeclineButton"]
